Справочники обновление 7 марта

--- a/whr/store/templates/store/menu.html
+++ b/whr/store/templates/store/menu.html
@@ -14,5 +14,6 @@
 {% endif %}
 
 {% endblock LinkArea %}
-{% block DataArea %}
+{% block DataArea %}<div class="text-center align-middle mt-5 pt-5">
+<img src="{% static '/images/store.jpg' %}" width="1000px"></div>
 {% endblock DataArea %}
