Начало работы с документами

--- a/whr/store/templates/store/base.html
+++ b/whr/store/templates/store/base.html
@@ -52,5 +52,6 @@
 </div>
 {% include 'store/spr/ajax.html' %}
 {% include 'store/js/add_nom_ajax.html' %}
+{% include 'store/Doc/SaveOstDoc.html' %}
 </body>
 </html>
