--- a/whr/store/templates/store/Menu/Docs.html
+++ b/whr/store/templates/store/Menu/Docs.html
@@ -11,7 +11,7 @@
     <h5 class="card-title">Начальные остатки</h5>
      <img class="card-img-top miniature" src="{% static '/images/report3.png' %}" >
     <p class="card-text">Создание,редактирование, удаление документов для ввода начальных остатков</p>
-    <a href="{% url 'NewOstDoc' %}" class="btn btn-primary">Журнал документов</a>
+    <a href="{% url 'JurnalOst' %}" class="btn btn-primary">Журнал документов</a>
     </div>
     </div>
 </div>
