--- a/whr/store/templates/store/base.html
+++ b/whr/store/templates/store/base.html
@@ -53,5 +53,6 @@
 {% include 'store/spr/ajax.html' %}
 {% include 'store/js/add_nom_ajax.html' %}
 {% include 'store/Doc/SaveOstDoc.html' %}
+{% include 'store/Doc/ChangeOstDocString.html' %}
 </body>
 </html>
