--- a/whr/store/templates/store/Doc/DocOst.html
+++ b/whr/store/templates/store/Doc/DocOst.html
@@ -8,7 +8,7 @@
     </div>
 <div class="col-md-11 mx-auto shadow">
 <table class="table shadow table-bordered">
-<thead>
+<thead style="background-color:LightGreen">
 <th style="width:250px;"></th>
 <th style="width:80px;" class="border text-end">Номер документа</th>
 <th style="width:80px;" class="border text-end" >Дата документа</th>
