--- a/whr/store/templates/store/Doc/ChangeOstDocString.html
+++ b/whr/store/templates/store/Doc/ChangeOstDocString.html
@@ -2,6 +2,7 @@
  let output=$('#string-ost').html();
 
 function GetSumm(){
+
 let price=$("#idprice").val();
    let kol=$("#idkol").val();
    let nds=$("#idnds").val();
@@ -36,6 +37,7 @@ $("#idnds").keyup(function(){
 
 $('#ost-string-form').on('submit',function(e){
 event.preventDefault();
+let _idstring=$('#id_string').val();
 let _id=$('#id_iddoc').val();
 let _title=$("#idtitle").val();
 let _price=$("#idprice").val();
@@ -46,6 +48,7 @@ let _total=$('#idtotal').val();
 let _csr=$("input[name=csrfmiddlewaretoken]").val();
 
 mydata={
+idstring:_idstring,
 id:_id,
 title:_title,
 price:_price,
@@ -69,6 +72,7 @@ sn=data.total_nds
 console.log(s.summa__sum)
 
 if (data.status==1){
+$('#idfooter').remove();
 for(i=0;i<x.length;i++){
 output +='<tr class="align-middle"><td style="width:40%"> '+ x[i]['title__title']+", " + x[i]['title__izm__title']+'</td>'+
 '<td  class="text-end" style="width:10%" >'+ x[i]['price']+'</td>'+
@@ -76,15 +80,17 @@ output +='<tr class="align-middle"><td style="width:40%"> '+ x[i]['title__title'
 '<td   class="text-end "style="width:10%" >'+ x[i]['summa']+'</td>'+
 '<td   class="text-end " style="width:10%" >'+ x[i]['nds']+'</td>'+
 '<td  class="text-end " style="width:10%" >'+ x[i]['summawithnds']+'</td>'+
-'<td  class="text-center" colspan=2 ><input data-sid='+x[i].id+' data-update='+x[i].id+' class="btn-nom-update " value="Update" type="image" src="../static/images/edit2.png" style="width:35px;" > '+
-'<input data-sid='+x[i].id+' data-del="#" class="btn-nom-delete " value="Update" type="image" src="../static/images/del.png" style="width:35px;" > </td></tr>'
+'<td  class=" text-end" colspan=2 ><input data-sid='+x[i].id+' data-update='+x[i].id+' class="btn-string-update " value="Update" type="image" src="../static/images/edit2.png" style="width:25px;" > '+
+'<input data-sid='+x[i].id+' data-del="#" class="btn-string-delete " value="Update" type="image" src="../static/images/del.png" style="width:25px;" > </td></tr>'
 }
-itog='<tr style="color:blue"><td colspan=3>Итого:</td> <td class="text-end fixed" id="id_total_summa">'+s+'<td></td><td class="text-end fixed " id="id_total_nds">'+sn+'</td></tr>'
+
 console.log(x);
 console.log('saved');
  $('#string-ost').html(output)
- $('#string-ost tr:last').after(itog);
+
  $("#ost-string-form")[0].reset();
+ location.reload();
+
 }
 }
 });
@@ -126,18 +132,15 @@ location.href=data.url;
 
 ///////////////////////////Редактирование документа остатков//////////////////////
 
-
 $('#ost-doc').on('click','.btn-ost-update',function(e){
 console.log('Pressed button');
 let _id=$(this).attr('data-sid');
 let _csr=$("input[name=csrfmiddlewaretoken]").val();
-console.log(_id);
 
 mydata={
 id:_id,
 csrfmiddlewaretoken:_csr,
 }
-
 $.ajax({
 url:'/EditOstDoc/',
 method:"POST",
@@ -146,12 +149,66 @@ dataType:"json",
 
 success:function(data){
 if (data.status==1){
-
-console.log('saved');
 location.href=data.url
 }
 }
+});
+});
+
+////////////////////////////////////Удаление строки из документа остатков/////////////////
+$('#string-ost').on('click','.btn-string-delete',function(e){
+
+if (confirm('Удалить запись?')) {
+	let _id=$(this).attr('data-sid');
+    let _csr=$("input[name=csrfmiddlewaretoken]").val();
+	console.log('Deleted!');
+	console.log(_id);
+mydata={id:_id,csrfmiddlewaretoken:_csr,}
+
+$.ajax({
+url:'/DeleteOstStringTable/',
+method:"POST",
+data:mydata,
+dataType:"json",
+
+success:function(data){
+if(data.status ==1){location.reload()}
+}
+});
+}
+});
+////////////////////////////////////Редактирование строки из документа остатков/////////////////
+$('#string-ost').on('click','.btn-string-update',function(e){
+
+	let _id=$(this).attr('data-sid');
+    let _csr=$("input[name=csrfmiddlewaretoken]").val();
+mythis=$(this);
+	console.log('Updated!');
+	console.log(_id);
+mydata={id:_id,
+csrfmiddlewaretoken:_csr,}
+$.ajax({
+url:'/UpdateOstStringTable/',
+method:"POST",
+data:mydata,
+dataType:"json",
+
+success:function(data){
+$('#idstring').val(data.id);
+$('#idtitle').val(data.title_id).change();
+$('#idprice').val(data.price);
+$('#idkol').val(data.kol);
+$('#idnds').val(data.nds);
+$('#idsumma').val(data.summa);
+$('#idtotal').val(data.summawithnds);
+$(mythis).closest("tr").fadeOut();
+
+}
+});
+
+
 
 });
-});
+
+
 </script>
