--- a/whr/store/templates/store/Doc/JurnalPost.html
+++ b/whr/store/templates/store/Doc/JurnalPost.html
@@ -7,15 +7,15 @@
 <div class="col-md-11 mx-auto shadow">
 
 <table class="table shadow table-bordered table-hover">
-<thead class="table-primary">
+<thead class="bg-primary text-light">
 <tr>
-<th style="width:14.2%;" class="border text-end">Номер документа</th>
-<th style="width:14.2%;" class="border text-end" >Дата документа</th>
-<th style="width:20.2%;" class="border text-end" >Поставщик</th>
-<th style="width:14.2%;" class="border text-end" >Сумма</th>
-<th style="width:10.2%;" class="border text-end" >НДС</th>
-<th style="width:14.2%;" class="border text-end" >Сумма с НДС</th>
-<th style="width:14.2%;" class="border text-end"></th>
+<th style="width:14.2%;" class=" text-end">Номер документа</th>
+<th style="width:14.2%;" class=" text-end" >Дата документа</th>
+<th style="width:20.2%;" class=" text-end" >Поставщик</th>
+<th style="width:14.2%;" class=" text-end" >Сумма</th>
+<th style="width:10.2%;" class=" text-end" >НДС</th>
+<th style="width:14.2%;" class=" text-end" >Сумма с НДС</th>
+<th style="width:14.2%;" class=" text-end"></th>
 </tr>
 </thead>
     <form method="post" id="post-form">
