--- a/whr/store/templates/store/Doc/AddStringPost.html
+++ b/whr/store/templates/store/Doc/AddStringPost.html
@@ -1,12 +1,8 @@
 {% extends 'store/menu.html' %}
 {% load static %}
 {% block DataArea %}
-
 <div class="row">
-
-
 <div class="col-md-12 mx-auto shadow">
-
 <table class=" table shadow table-hover ">
 <thead class="bg-primary text-light">
 <tr>
@@ -18,8 +14,6 @@
 </thead>
     <form method="post" id="post-form2" >
  {% csrf_token %}
-
-
     <tr>
         <td><select name="title" id="id_postav" class="form-control  " required >
             <option value="{{postav.id}}" selected >{{postav.title}}</option>
@@ -34,76 +28,112 @@
     </form>
     </tr>
 </table >
-
-
+ <div class="scrolltable">
     <table class=" table shadow table-bordered table-hover" style="width:100%" >
-
         <form id="ost-string-form" method="post">
              {% csrf_token %}
             <input  type="hidden" id="id_string" value="" >
             <thead class="bg-primary text-light">
             <th style="width:40%" class="" >Наименование, ед.изм.</th>
-
-             <th  class="text-end " style="width:10%" >Цена</th>
-             <th  class="text-end "style="width:10%"  >Кол-во</th>
-             <th  class="text-end " style="width:10%">Сумма</th>
-             <th class="text-end  " style="width:10%" >НДС</th>
+            <th  class="text-end " style="width:10%" >Цена</th>
+            <th  class="text-end "style="width:10%"  >Кол-во</th>
+            <th  class="text-end " style="width:10%">Сумма</th>
+            <th class="text-end  " style="width:10%" >НДС</th>
             <th class="text-end " style="width:10%" >Сумма с НДС</td>
             <th></th>
             </thead>
 <tr>
-       <td > <select name="title" id="idtitle" class="form-control  " required >
-
+       <td > <div class="input-group">
+ <select name="title" id="idtitle" class="form-control  " required >
             <option selected></option>
             {% for item in nom %}
             <option value="{{item.id}}">{{item.title}}, {{item.izm}}</option>
             {% endfor %}
-       </select></td>
-
-           <td> <input type="number" id="idprice" class="form-control text-end" step="any" required >
+       </select>
+                    <div class=" input-group-button pr-2">
+                        <button type="button" id="show-contact-modal-button" class="btn btn-primary mr-2" style="margin-left: 5px;" data-bs-toggle="modal" data-bs-target="#ModalNomPodbor">...</button>
+                    </div>
+                </div>
+            </td>
+           <td> <input type="number" id="idprice" class="form-control text-end" step="any" required  min="0">
         </td></td>
-
-         <td><input type="number" id="idkol" class="form-control text-end" step="any" required>
+         <td><input type="number" id="idkol" class="form-control text-end" step="any" required min="0">
         </td>
-
        <td> <input type="number" id="idsumma" class="form-control text-end" step="any" required readonly>
         </td>
-
-        <td><input type="number" id="idnds" class="form-control text-end" value="20" required>
+        <td><input type="number" id="idnds" class="form-control text-end" value="20" required min="0">
         </td>
-
            <td> <input type="number" id="idtotal" class="form-control text-end" step="any" required readonly>
         </th>
-
         <td class="text-end"><button class="btn btn-secondary btn-sm" type="submit" id="save-string">Записать</td>
 </tr>
         </form>
-
-
-
     <tbody id="string-ost" >
-
 {% for item in items %}
     <tr><td>{{item.title}},{{item.title.izm}}</td>
     <td class="text-end">{{item.price}}</td>
     <td class="text-end">{{item.kol}}</td>
     <td class="text-end">{{item.summa}}</td>
-
     <td class="text-end " >{{item.nds}}</td>
     <td class="text-end">{{item.summawithnds}}</td>
       <td  class="text-end" colspan=2 ><input data-sid={{item.pk}} data-update={{item.pk}} class="btn-string-update " value="Update" type="image" src="../static/images/edit2.png" style="width:25px;" >
 <input data-sid={{item.pk}} data-del="#" class="btn-string-delete " value="Update" type="image" src="../static/images/del.png" style="width:25px;" > </td></tr>
     </tr>
     {% endfor %}
-
     </tbody>
         <tfoot id="idfoot"><td class="fw-bold">Итого:</td><td colspan="3" class="text-end fw-bold ">{{s}}</td><td colspan="2>" class="text-end fw-bold">{{s2}}</td> </tfoot>
 </table>
-
-
-
 </div>
 </div>
+</div>
+<!-- Модальное окно новая номенклатура -->
+<div class="modal fade" id="ModalNomPodbor" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-xl">
+    <div class="modal-content ">
+      <div class="modal-header bg-primary text-light">
+        <h5 class="modal-title  " id="exampleModalLabel"><span >Добавление номенклатуры</span></h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
+      </div>
+      <div class="modal-body " >
+          <form id="podbor-nom-form" action="#" method="post">
+{% csrf_token %}
+<table class="table table-bordered" >
+  <thead class="bg-primary text-light">
+  <th style="width:45%">Наименование</th>
+   <th style="width:15%">Ед.изм.</th>
+  <th style="width:20%">Категория</th>
+  <th style="width:15%">Срок,мес.</th>
+  </thead>
+<tbody>
+<tr>
+    <td><input type="text" class="form-control" required id="ostpodbortitle"></td>
+     <td><select class="form-control" required id="ostpodborizm">
+     <option selected></option>
+     {% for item in izm %}
+     <option value="{{item.id}}">{{item.title}}</option>
+     {% endfor %}
+     </select>
+     </td>
+    <td><select class="form-control" id="ostpodborcategory" required>
+    <option selected></option>
+    {% for item in category %}
+    <option value="{{item.id}}">{{item.title}}</option>
+    {% endfor %}
+    </select>
+    </td>
+    <td><input type="number" class="form-control" value="0" id="ostpodborsrok"></td>
+</tr>
+</tbody>
+</table>
 
+      </div>
+      <div class="modal-footer">
+        <button type="submit" class=" btn btn-primary" data-bs-dismiss="modal" id="savenom_modal" >Сохранить</button>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+  </form>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock DataArea %}
 
