--- a/whr/store/templates/store/spr/SprNom.html
+++ b/whr/store/templates/store/spr/SprNom.html
@@ -6,49 +6,75 @@
     <div class="col-md-1  ">{{pic_label}}</div>
 <div class="col-md-11 mx-auto shadow">
 <table class="table table-bordered shadow ">
- <thead>
+ <thead class="bg-primary text-light">
 
     <tr class="mt-0">
-        <th style="width:25%;" class="border" >Наименование </th>
-        <th style="width:16.3%;" class="border border-end-0" colspan="2">Ед.изм.</th>
-         <th style="width:25%;" class="border border-end-0" colspan="2">Категория</th>
-         <th style="width:16.3%;" class="text-center" >Срок</th>
-        <th  style="width:16.3%" class="border"></th>
+        <th style="width:40%;" >Наименование </th>
+        <th style="width:16.3%;"  >Ед.изм.</th>
+         <th style="width:25%;"  >Категория</th>
+         <th style="width:6.3%;"  >Срок</th>
+        <th  style="width:11.3%" ></th>
     </tr>
   </thead>
 <form  method="post" id="nom-form">
  {% csrf_token %}
     <input type="hidden" name="unit_id " id="unit_id">
-
+<tbody>
  <tr>
-     <td class="pt-2 border"> {{ form.title}}</td>
-     <td class="pt-2 border border-end-0"  >{{form.izm}}</td>
-     <td class="text-start border border-start-0 pt-2 ml-2 " style="padding-left:0;"><button type="button" class="btn btn-secondary btn-sm  addbtn"   data-bs-toggle="modal" data-bs-target="#exampleModal5">+</button></td>
-     <td class="pt-2 border border-end-0"  >{{form.category}}</td>
-     <td class="text-start border border-start-0 pt-2 ml-2 " style="padding-left:0;"><button type="button" class="btn btn-secondary btn-sm  addbtn" data-bs-toggle="modal" data-bs-target="#exampleModal6">+</button></td>
+     <td> {{ form.title}}</td>
+     <td>
+         <div class="input-group">
+                    {{form.izm}}
+                    <div class=" input-group-button pr-2">
+                        <button type="button" id="show-contact-modal-button" class="btn btn-primary mr-2" style="margin-left: 5px;" data-bs-toggle="modal" data-bs-target="#exampleModal5">...</button>
+                    </div>
+                </div>
+        </td>
+
+     <td   >
+     <div class="input-group">
+     {{form.category}}
+     <div class=" input-group-button pr-2">
+     <button type="button" id="show-contact-modal-button2" class="btn btn-primary mr-2" style="margin-left: 5px;" data-bs-toggle="modal" data-bs-target="#exampleModal6">...</button>
+     </div>
+     </div>
+
+     </td>
+
      <td class=" text-end " >{{form.srok}}</td>
      <td class="pt-2 text-end" > <button type="submit" class="btn  btn-primary btn-sm pt-2 pb-2    " id="nomsavebtn" >Сохранить</button></td>
  </tr>
-</form>
+</form></tbody>
+</table>
 
+<div class="scrolltable">
+<table class="table table-bordered shadow table-hover ">
+<thead >
 
-
+    <tr class="mt-0">
+        <th style="width:40%" class="border" ></th>
+        <th style="width:16.3%" class="border border-end-0" ></th>
+         <th style="width:25%" class="border border-end-0" ></th>
+         <th style="width:6.3%" class="text-center" ></th>
+        <th style="width:11.3%" class="text-center" ></th>
+    </tr>
+  </thead>
 <tbody id="tbody">
     {% for item in unit %}
 <tr>
 <td  class="align-middle">{{item.title}}</td>
-<td  class="align-middle" colspan="2">{{item.izm.title}}</td>
- <td  class="align-middle"colspan="2">{{item.category.title}}</td>
+<td  class="align-middle" >{{item.izm.title}}</td>
+ <td  class="align-middle">{{item.category.title}}</td>
    <td  class="align-middle  text-center">{{item.srok}}</td>
-<td class="text-end align-middle " ><input data-sid="{{item.id}}" data-update="#" class="btn-nom-update " value="Update" type="image" src="{% static '/images/update.png' %}" width="25px" >
-<input data-sid="{{item.id}}" data-del="#" class="btn-nom-delete " value="Delete" type="image" src="{% static '/images/del.png' %}" width="28px"> </td>
+<td class="text-end align-middle " ><input data-sid="{{item.id}}" data-update="#" class="btn-nom-update " value="Update" type="image" src="{% static '/images/edit2.png' %}" width="25px" >
+<input data-sid="{{item.id}}" data-del="#" class="btn-nom-delete " value="Delete" type="image" src="{% static '/images/del.png' %}" width="25px"> </td>
 
 </tr>
 {% endfor %}
 </tbody>
 </table>
 </div>
-
+</div>
 </div>
 
 
@@ -56,8 +82,8 @@
 <div class="modal fade" id="exampleModal5" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog ">
     <div class="modal-content ">
-      <div class="modal-header ">
-        <h5 class="modal-title " id="exampleModalLabel"><span >Добавление единицы измерения</span></h5>
+      <div class="modal-header bg-primary text-light">
+        <h5 class="modal-title  " id="exampleModalLabel"><span >Добавление единицы измерения</span></h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
       </div>
       <div class="modal-body">
@@ -77,7 +103,7 @@
 <div class="modal fade" id="exampleModal6" tabindex="-1" aria-labelledby="exampleModalLabel6" aria-hidden="true">
   <div class="modal-dialog ">
     <div class="modal-content ">
-      <div class="modal-header ">
+      <div class="modal-header bg-primary text-light ">
         <h5 class="modal-title " id="exampleModalLabel6"><span >Добавление категории</span></h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
       </div>
